add api versioning to ptool modules
