# cognito/routes/authentication.js
@@ -6,12 +6,12 @@ const authenticationController = dependencyInjector.inject('authenticationContro
 
 const {isAuthenticated} = require('../middleware/middleware.js');
 
-router.post('/register', authenticationController.register);
-router.post('/login', authenticationController.login);
-router.post('/refresh-token', authenticationController.refreshToken);
-router.post('/change-password', isAuthenticated, authenticationController.changePassword);
-router.post('/forgot-password', authenticationController.forgotPassword);
-router.post('/forgot-password/confirm', authenticationController.confirmForgotPassword);
-router.post('/delete-account', isAuthenticated, authenticationController.deleteAccount);
+router.post('/api/v1/register', authenticationController.register);
+router.post('/api/v1/login', authenticationController.login);
+router.post('/api/v1/refresh-token', authenticationController.refreshToken);
+router.post('/api/v1/change-password', isAuthenticated, authenticationController.changePassword);
+router.post('/api/v1/forgot-password', authenticationController.forgotPassword);
+router.post('/api/v1/forgot-password/confirm', authenticationController.confirmForgotPassword);
+router.post('/api/v1/delete-account', isAuthenticated, authenticationController.deleteAccount);
 
 module.exports = router;
