# firebase_auth/routes/authentication.js
@@ -8,10 +8,10 @@ const {
 const dependencyInjector = require('../dependency-injector.js');
 const authenticationController = dependencyInjector.inject('authenticationController');
 
-router.post('/register', authenticationController.register);
-router.post('/login', authenticationController.login);
-router.post('/change-password', isAuthenticated, authenticationController.changePassword);
-router.post('/forgot-password', authenticationController.forgotPassword);
-router.post('/delete-account', isAuthenticated, authenticationController.deleteAccount);
+router.post('/api/v1/register', authenticationController.register);
+router.post('/api/v1/login', authenticationController.login);
+router.post('/api/v1/change-password', isAuthenticated, authenticationController.changePassword);
+router.post('/api/v1/forgot-password', authenticationController.forgotPassword);
+router.post('/api/v1/delete-account', isAuthenticated, authenticationController.deleteAccount);
 
 module.exports = router;
